recursion.cons.remove.Remove.scala.error
Compilation error:
Remove:10: error: type mismatch;
 found   : List[Int]
 required: Int
    return l :: remove(l.tail, v);
             ^