recursion.cons.remove.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  
  if(l == Nil)
  {
    return Nil;
  }
  else
  {
    return l :: remove(l.tail, v);
  }
  
  
  
}
